--- a/index.html
+++ b/index.html
@@ -3,39 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DARU PAGINA</title>
+    <title>daru's thinking room</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <center>
 <body>
-    <header>
+    <div class="depresion">
         <img src="head.gif">
-        <h1>Por todas las cosas que veo en tu alma, que vos no;</h1>
-    </header>
-    <img src="nosotros.png" width="600" height="600"> 
-    <p>hehe, que fea se ve la foto!</p>
-    <p>una de cuando te chamuyaba</p>
-    <img src="hehehe.jpg">
-    <p>Espero nunca dejar de extrañarte.</p>
-    <p>LA MARICONA DEL NOVIO</p>
-    <img src="amor.jpg" width="500" height="300">
-    <p><b></b>Aunque bueno, mas bien le diste sentido a mi vida.</p>
-    <p>Yo hago el amor con las mentes
-        Me seducen las mentes. Me seduce la inteligencia
-        Me seduce una cara y un cuerpo cuando veo que hay una mente que las mueve y que vale la pena conocer
-        Yo hago el amor con las mentes. Hay que follarse a las mentes
-        Yo hago el amor con las mentes</p>
-    <img src="wadatraje.jpg" width="300" height="600">
-    <p>Retiro lo dicho. Joder que si te follo.</p>
-    <div class="guadaTexto">
-        <p>Verte por primera vez fue como ver un cuadro. Un cuadro que refleja la totalidad del artista. Alguien al que nunca le gusta como le quedan las cosas, se siente feo e incapaz, sobrecargado. Pero bueno, pareciera que eso es todo lo que el ve, porque yo veo en sus obras, lo que el no.
-            Porque tuve la suerte de ver a apenas centimetros, los ojos del artista. Vi como se dilataban sus pupilas, se sentía como si estuviera abriendo una puerta, como si estuviera en una habitación, con todo lo que pasa por su cabeza. Vi todo lo que tenía para decir, vi un niño que se escondia de todo lo que habitaba.
-            Te obligaron a callar, la situación obligó a tu niño a esconderse, pero yo veo tus cuadros y se como sos de verdad. Sos mi artista favorito, y esto va por todo lo que vos no ves en tu alma.
-            Quiero escuchar todo lo que tenes para decir, quiero ver todo lo que tenes para hacer, quiero sentir todo lo que tenes para dar, porque quiero estar con vos por el resto de mi vida, porque sos mi lugar seguro, porque siempre estas ahí, esperandome con un té que se esta enfriando porque siempre tardo. 
-            Te debo la vida, porque estuviste ahi incondicionalmente, dandome tu amor, cuando mi cabeza queria alejar a todos y toda la ayuda que tenia preparada para recibir. Que tu mamá haya pasado de abrazarte pidiendo que sigas adelante, a abrazarte emocionada de verte tan bien, aun sin saber la razón por la que estabas tan bien, me hizo sentir muy orgulloso y util, porque todo lo que hago es para que los dos estemos bien, y siento que eso es lo que esta pasando. Te amo tanto, tanto pero tanto tanto que no se como explicarselo a nadie, ni eso ni la sensación de estar absurdamente enamorado de alguien. Espero tener la calidez de tu cuerpo por lo que me queda de existencia, y te voy a ayudar con todo lo que este a mi alcance, esperando siempre verte a los ojos, y cada vez ver mas suelto a tu niño.
+        <h1>Por esos momentos en que todo se desmorona;</h1>
+        <p>Espero nunca tener que seguir esta parte.</p>
+        <img src="fumadorcara.gif">
+        <p>Porque vivir es difícil, y todo es un desafío nuevo.
+            Porque no hay solución, y todo es una oportunidad.
+        </p>
+        <img src="shaking-crying-throwing-up-insane.gif" width="200" height="200">
+        <p>No estás escribiendo
+            Estoy con mi tren, ¿te gusta?
+            Lo acabo de comprar
+            ¿Y desde cuándo no escribís nada?
+            Estuve de viaje
+            Quizás ya no tengas nada que decir.</p>
+        <img src="artwork.jpg" width="200" height="200">
+        <p>Porque el amor propio es difícil, y todo se basa en amar
+            Porque no hay solución, y todo es una oportunidad.
+        </p>
+        <p>Pero bueno, ¿qué puedo saber yo con 16 años?</p>
+        <p>Un documento que resume todo lo que me hizo bien en esta vida, pesa unos míseros 5kb.</p>
+        <div class="listaBuenita">
+            <li>El 9 de Abril de 2022.</li>
+            <li>Tener un jardín con Guada.</li>
+            <li>Volver a vivir el mejor dia de mi vida.</li>
+            <li>Querer mejorar.</li>
+            <li>Aprender idiomas.</li>
+            <li>Valorar mi habilidad para ejercer el existencialismo.</li>
+            <li>La idea del renacimiento.   </li>
+        </div>
+        <p>Porque no hay solución, y todo es una oportunidad.
+            Solo que ahora, te tengo a vos, y las oportunidades toman forma de solución.
         </p>
     </div>
-    <p>¿Y si no estuvieras aca?</p>
+
+    <div class="parteGuada">
+        <h1>Por todas las cosas que veo en tu alma, que vos no;</h1>
+        <img src="nosotros.png" width="600" height="600"> 
+        <p>hehe, que fea se ve la foto!</p>
+        <p>una de cuando te chamuyaba</p>
+        <img src="hehehe.jpg">
+        <p>Espero nunca dejar de extrañarte.</p>
+        <img src="tasmal.jpg" width="400" height="400">
+        <p>LA MARICONA DEL NOVIO</p>
+        <p>CUANDO ES CON VOS
+            SIENTO TODO IRREAL</p>
+        <img src="amor.jpg" width="500" height="300">
+        <p><b></b>Aunque bueno, mas bien le diste sentido a mi vida.</p>
+        <p>Yo hago el amor con las mentes
+            Me seducen las mentes. Me seduce la inteligencia
+            Me seduce una cara y un cuerpo cuando veo que hay una mente que las mueve y que vale la pena conocer
+            Yo hago el amor con las mentes. Hay que follarse a las mentes
+            Yo hago el amor con las mentes</p>
+        <img src="wadatraje.jpg" width="300" height="600">
+        <p>Retiro lo dicho. Joder que si te follo.</p>
+        <div class="guadaTexto">
+            <p>Verte por primera vez fue como ver un cuadro. Un cuadro que refleja la totalidad del artista. Alguien al que nunca le gusta como le quedan las cosas, se siente feo e incapaz, sobrecargado. Pero bueno, pareciera que eso es todo lo que el ve, porque yo veo en sus obras, lo que el no.
+                Porque tuve la suerte de ver a apenas centimetros, los ojos del artista. Vi como se dilataban sus pupilas, se sentía como si estuviera abriendo una puerta, como si estuviera en una habitación, con todo lo que pasa por su cabeza. Vi todo lo que tenía para decir, vi un niño que se escondia de todo lo que habitaba.
+                Te obligaron a callar, la situación obligó a tu niño a esconderse, pero yo veo tus cuadros y se como sos de verdad. Sos mi artista favorito, y esto va por todo lo que vos no ves en tu alma.
+                Quiero escuchar todo lo que tenes para decir, quiero ver todo lo que tenes para hacer, quiero sentir todo lo que tenes para dar, porque quiero estar con vos por el resto de mi vida, porque sos mi lugar seguro, porque siempre estas ahí, esperandome con un té que se esta enfriando porque siempre tardo. 
+                Te debo la vida, porque estuviste ahi incondicionalmente, dandome tu amor, cuando mi cabeza queria alejar a todos y toda la ayuda que tenia preparada para recibir. Que tu mamá haya pasado de abrazarte pidiendo que sigas adelante, a abrazarte emocionada de verte tan bien, aun sin saber la razón por la que estabas tan bien, me hizo sentir muy orgulloso y util, porque todo lo que hago es para que los dos estemos bien, y siento que eso es lo que esta pasando. Te amo tanto, tanto pero tanto tanto que no se como explicarselo a nadie, ni eso ni la sensación de estar absurdamente enamorado de alguien. Espero tener la calidez de tu cuerpo por lo que me queda de existencia, y te voy a ayudar con todo lo que este a mi alcance, esperando siempre verte a los ojos, y cada vez ver mas suelto a tu niño.
+            </p>
+        </div>
+        <p>¿Y si no estuvieras aca?</p>
+        <p>Tu alegría gratuita, tu sonrisa por defecto
+            Ni que el mundo fuera perfecto
+            En serio, eres para mí un misterio.</p>
+    </div>
+    <img src="GATITO-1.png">
+    <img src="GATITO-2.png">
+    <img src="GATITO-3.png">
+    <div class="final">
+        <p>Supongo que este es el resultado de escribir sin juzgarme</p>
+    </div>
 </body>
 </center>
 </html>
