--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <p>Porque vivir es difícil, y todo es un desafío nuevo.
             Porque no hay solución, y todo es una oportunidad.
         </p>
+        <p>Cuando sepan que el hombre de acero
+            Esta hecho de alma y de pecados
+        </p>
         <img src="shaking-crying-throwing-up-insane.gif" width="200" height="200">
         <p>No estás escribiendo
             Estoy con mi tren, ¿te gusta?
@@ -23,10 +26,17 @@
             ¿Y desde cuándo no escribís nada?
             Estuve de viaje
             Quizás ya no tengas nada que decir.</p>
+        <p>¿Qué te preocupa? De verdad, ¿qué?
+            En el caos hay mucho ruido, todos gritan al mismo tiempo:
+                ¡HAY QUE SER ALGUIEN!
+            Ay... ¿no somos alguien ya?
+            Se rompió una copa de vino.
+        </p>
         <img src="artwork.jpg" width="200" height="200">
         <p>Porque el amor propio es difícil, y todo se basa en amar
             Porque no hay solución, y todo es una oportunidad.
         </p>
+        <p>Mi vida ha estado llena de vergüenza. La verdad es que no tengo la más remota idea de lo que es vivir como un ser humano.</p>
         <p>Pero bueno, ¿qué puedo saber yo con 16 años?</p>
         <p>Un documento que resume todo lo que me hizo bien en esta vida, pesa unos míseros 5kb.</p>
         <div class="listaBuenita">
@@ -36,8 +46,14 @@
             <li>Querer mejorar.</li>
             <li>Aprender idiomas.</li>
             <li>Valorar mi habilidad para ejercer el existencialismo.</li>
-            <li>La idea del renacimiento.   </li>
+            <li>La idea del renacimiento.</li>
         </div>
+        <p>Por lo general, las personas no muestran lo terribles que son.
+            Pero son como una vaca pastando tranquila que, de repente, levanta la cola y descarga un latigazo sobre el tábano.
+            Basta que se le de la ocasion para que muestre su horrenda naturaleza.
+            Este caracter innato es una condicion esencial para que el ser humano sobreviva.
+            Al pensarlo, perdia cualquier esperanza sobre la humanidad.
+        </p>
         <p>Porque no hay solución, y todo es una oportunidad.
             Solo que ahora, te tengo a vos, y las oportunidades toman forma de solución.
         </p>
